Add Message for User Registration

--- a/src/modules/login/templates/loginErrorViewTemplate.html
+++ b/src/modules/login/templates/loginErrorViewTemplate.html
@@ -3,3 +3,11 @@
   		Wrong Username Or Password!
   	</div>
   	 {{/wrongUserOrPassword}}
+
+
+
+  	{{#userRegistered}}
+  	<div class="login-wrapper-pusher-userRegistered">
+  		User successfully registered!
+  	</div>
+  	 {{/userRegistered}}  	 
