Add "Add Stream" message in StreamListView

--- a/src/modules/streams/templates/streamListTemplate.html
+++ b/src/modules/streams/templates/streamListTemplate.html
@@ -6,6 +6,9 @@
 
 	</div>
 
+	{{^models}}
+		<div class='stream-list-no-models'> Add Streams!</div>
+	{{/models}}
 
 	<a class='stream-list-adder fa fa-plus-square-o'> </a>
 
