--- a/src/style/sass/header.scss
+++ b/src/style/sass/header.scss
@@ -116,7 +116,7 @@
 	margin-top:8px;
 	-moz-transition-duration: 400ms;
 	-o-transition-duration: 400ms;
-	-webkit-transition-duration: 400ms;#5F5F5F
+	-webkit-transition-duration: 400ms;
 	transition-duration: 400ms;
 }
 
