--- a/src/style/sass/header.scss
+++ b/src/style/sass/header.scss
@@ -1,7 +1,7 @@
 
 
 .header {
-	background-color: #4E4E4E;
+	background-color: $mainDark;
 	color: #F3F3F3;
 	width: 100%;
 	height: 60px;
@@ -122,7 +122,7 @@
 
 
 .launcher-icon.locked {
-	color:whitesmoke;
+	color: $mainLight;
 	font-size:36px !important;
 	margin-top:0px;
 }
