--- a/src/style/sass/style.scss
+++ b/src/style/sass/style.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 
 
 body {
@@ -19,7 +21,6 @@ html {
 	margin-top:30px;
 	text-align:center;
 }
-
 
 .sub-wrapper {
 	height:inherit;
