--- a/src/modules/streams/templates/streamManipulationTemplate.html
+++ b/src/modules/streams/templates/streamManipulationTemplate.html
@@ -4,13 +4,7 @@
 
 	<div class="stream-manipulation-timeseries"></div>
 	<div class="stream-manipulation-histogram"></div>
-	<div class="stream-manipulation-stats">
-		<p>mean:</p>
-		<p>std:</p>
-		<p>var:</p>
-		<p>frequency:</p>
-		<p># observations:</p>
-	</div>
+	<div class="stream-manipulation-stats"></div>
 
 	<div class="stream-manipulation-calculator">
 		<label for="function">f(x) = </label>
