Add Button to apply transformation

--- a/src/modules/streams/templates/streamManipulationTemplate.html
+++ b/src/modules/streams/templates/streamManipulationTemplate.html
@@ -8,7 +8,7 @@
 
 	<div class="stream-manipulation-calculator">
 		<label for="function">f(x) = </label>
-		<input class="stream-manipulation-input"type="text" name="function">
+		<input class="stream-manipulation-input"type="text" name="function"> <button class"stream-manipulation-apply"> Apply </button>
 		<table>
 			<tr>
 				<td>1</td> <td>2</td> <td>3</td> <td>%</td>
