--- a/src/modules/streams/templates/streamManipulationTemplate.html
+++ b/src/modules/streams/templates/streamManipulationTemplate.html
@@ -7,8 +7,12 @@
 	<div class="stream-manipulation-stats"></div>
 
 	<div class="stream-manipulation-calculator">
+		<div class ="stream-manipulation-function">
 		<label for="function">f(x) = </label>
-		<input class="stream-manipulation-input"type="text" name="function"> <button class"stream-manipulation-apply"> Apply </button>
+		<input class="stream-manipulation-input"type="text" name="function"> 
+		<div class="stream-manipulation-apply"> Apply </div>	
+		</div>
+
 		<table>
 			<tr>
 				<td>1</td> <td>2</td> <td>3</td> <td>%</td>
