--- a/src/modules/streams/templates/streamManipulationTemplate.html
+++ b/src/modules/streams/templates/streamManipulationTemplate.html
@@ -15,16 +15,16 @@
 
 		<table>
 			<tr>
-				<td>1</td> <td>2</td> <td>3</td> <td>%</td>
+				<td data-value="1">1</td> <td data-value="2">2</td> <td data-value="3">3</td> <td data-value="%">%</td> <td data-value="(">(</td>
 			</tr>
 			<tr>
-				<td>4</td> <td>5</td> <td>6</td> <td>*</td>
+				<td data-value="4">4</td> <td data-value="5">5</td> <td data-value="6">6</td> <td data-value="*">*</td> <td data-value=")">)</td>
 			</tr>
 			<tr>
-				<td>7</td> <td>8</td> <td>9</td> <td>-</td>
+				<td data-value="7">7</td> <td data-value="8">8</td> <td data-value="9">9</td> <td data-value="-">-</td> <td data-value="log">log</td>
 			</tr>
 			<tr>
-				<td>.</td> <td>0</td> <td>=</td> <td>+</td>
+				<td data-value=".">.</td> <td data-value="0">0</td> <td data-value="=">=</td> <td data-value="+">+</td> <td data-value="ln">ln</td>
 			</tr>
 
 		</table>
