--- a/src/modules/streams/templates/streamManipulationTemplate.html
+++ b/src/modules/streams/templates/streamManipulationTemplate.html
@@ -9,7 +9,7 @@
 	<div class="stream-manipulation-calculator">
 		<div class ="stream-manipulation-function">
 		<label for="function">f(x) = </label>
-		<input class="stream-manipulation-input"type="text" name="function"> 
+		<input class="stream-manipulation-input"type="text" name="function" value="x"> 
 		<div class="stream-manipulation-apply"> Apply </div>	
 		</div>
 
@@ -21,10 +21,10 @@
 				<td data-value="4">4</td> <td data-value="5">5</td> <td data-value="6">6</td> <td data-value="*">*</td> <td data-value=")">)</td>
 			</tr>
 			<tr>
-				<td data-value="7">7</td> <td data-value="8">8</td> <td data-value="9">9</td> <td data-value="-">-</td> <td data-value="log">log</td>
+				<td data-value="7"> 7 </td> <td data-value="8"> 8 </td> <td data-value="9">9</td> <td data-value="-">-</td> <td data-value="log">log</td>
 			</tr>
 			<tr>
-				<td data-value=".">.</td> <td data-value="0">0</td> <td data-value="=">=</td> <td data-value="+">+</td> <td data-value="ln">ln</td>
+				<td data-value=".">.</td> <td data-value="0">0</td> <td data-value="AC">AC</td> <td data-value="+">+</td> <td data-value="ln">ln</td>
 			</tr>
 
 		</table>
