--- a/src/modules/streams/templates/streamManipulationTemplate.html
+++ b/src/modules/streams/templates/streamManipulationTemplate.html
@@ -15,16 +15,36 @@
 
 		<table>
 			<tr>
-				<td data-value="1">1</td> <td data-value="2">2</td> <td data-value="3">3</td> <td data-value="%">%</td> <td data-value="(">(</td>
+				<td data-value="1">1</td> 
+				<td data-value="2">2</td> 
+				<td data-value="3">3</td> 
+				<td data-value="%">%</td> 
+				<td data-value="(">(</td>
+				<td data-value="sin">sin</td>
 			</tr>
 			<tr>
-				<td data-value="4">4</td> <td data-value="5">5</td> <td data-value="6">6</td> <td data-value="*">*</td> <td data-value=")">)</td>
+				<td data-value="4">4</td> 
+				<td data-value="5">5</td> 
+				<td data-value="6">6</td> 
+				<td data-value="*">*</td> 
+				<td data-value=")">)</td>
+				<td data-value="cos">cos</td>
 			</tr>
 			<tr>
-				<td data-value="7"> 7 </td> <td data-value="8"> 8 </td> <td data-value="9">9</td> <td data-value="-">-</td> <td data-value="log">log</td>
+				<td data-value="7"> 7 </td> 
+				<td data-value="8"> 8 </td> 
+				<td data-value="9">9</td> 
+				<td data-value="-">-</td> 
+				<td data-value="log">log</td>
+				<td data-value="tan">tan</td>
 			</tr>
 			<tr>
-				<td data-value=".">.</td> <td data-value="0">0</td> <td data-value="AC">AC</td> <td data-value="+">+</td> <td data-value="ln">ln</td>
+				<td data-value=".">.</td> 
+				<td data-value="0">0</td> 
+				<td data-value="AC">AC</td> 
+				<td data-value="+">+</td> 
+				<td data-value="ln">ln</td>
+				<td data-value="EXP">EXP</td>
 			</tr>
 
 		</table>
