--- a/src/modules/streams/templates/streamManipulationTemplate.html
+++ b/src/modules/streams/templates/streamManipulationTemplate.html
@@ -35,7 +35,7 @@
 				<td data-value="8"> 8 </td> 
 				<td data-value="9">9</td> 
 				<td data-value="-">-</td> 
-				<td data-value="log">log</td>
+				<td data-value="log(">log</td>
 				<td data-value="tan">tan</td>
 			</tr>
 			<tr>
